@@ -31,6 +31,7 @@ Zurich
 suggestion Mm)
 [+] Added FNAF World (Labeled Five Nights at Freddy's World)
 [+] Added Freddy Fazbear's Pizzeria Simulator
+[+] Added Temple Run 2
 
 12/13/2025:
 [+] Added The Deadseat (Thanks for the suggestion Muffet<3)
